Custom model and temperature + pytest test generation (#3)
* Add: CLI params changed from positional to named.
Add: model and temperature parameters.
Add: Converted to the class AiReadmeGenerator.

* Fix: TypeError in readme_suggestion success return

* Add: "prompt_type" parameter.

* Fix: missing numpy dependency

* Fix: openai.error.InvalidRequestError
'0.7' is not of type 'number' - 'temperature'

---------

Co-authored-by: Carlos J. Ramirez <cramirez@jornaya.com>

--- a/Pipfile
+++ b/Pipfile
@@ -8,8 +8,10 @@ langchain = "*"
 openai = "*"
 gitpython = "*"
 python-dotenv = "*"
+numpy = "*"
 
 [dev-packages]
+pytest = "*"
 
 [requires]
 python_version = "3.8"
